name:                hmpc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/samosaara/hmpc#readme
license:             BSD3
license-file:        LICENSE
author:              Samuel Henrique Oliveira da Silva
maintainer:          samosaara@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , network-simple == 0.4.0.5
                     , bytestring == 0.10.8.1
  default-language:    Haskell2010

executable hmpc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hmpc
  default-language:    Haskell2010

test-suite hmpc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hmpc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/samosaara/hmpc
